--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,25 +1,24 @@
-name: Deploy Employee Portal
+
+name: Java CI with Maven
+
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
   pull_request:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
-  tests:
-    name: Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
+  build:
 
-      - name: Setup JDK 11
-      - uses: actions/setup-java@v1
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
-          check-latest: true
-
+          cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
