--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   server:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: Dockerfile
@@ -18,6 +19,7 @@ services:
       - frontend
 
   client:
+    platform: linux/amd64
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -32,6 +34,7 @@ services:
       - frontend
 
   db:
+    platform: linux/amd64
     image: "postgres"
     restart: always
     ports:
