--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: ap-south-1
-  ECR_REPOSITORY: employee-app-2
+  ECR_REPOSITORY: employee-app
   ECS_SERVICE: employee-app-service
   ECS_CLUSTER: employee-app-cluster
   ECS_TASK_DEFINITION: .aws/task-definition.json
@@ -44,7 +44,7 @@ jobs:
           # push it to ECR so that it can
           # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          echo "pushing $ECR_REGISTRY with $IMAGE_TAG
+          echo "pushing $ECR_REGISTRY with $IMAGE_TAG"
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
