--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,11 +15,6 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # terraform_version: 0.13.0:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
 #      - name: Terraform Format
 #        id: fmt
@@ -40,9 +35,12 @@ jobs:
         run: terraform validate -no-color
 
       - name: Terraform Plan
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         id: plan
         if: github.event_name == 'push'
-        run: terraform plan -no-color
+        run: terraform plan
         continue-on-error: true
 
       - uses: actions/github-script@0.9.0
