--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
 #        id: fmt
 #        run: terraform fmt -check
 
-      - name: Terraform Init
+      - name: Terraform init
         id: init
         run: terraform init
 
