--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'push'
-        run: terraform plan
+        run: terraform plan -lock=false
         continue-on-error: true
 
       - uses: actions/github-script@0.9.0
